# RxPY

./: .bumpversion.cfg  .coveragerc  .coveralls.yml  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  .travis.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  DocumentationWrter.py  LICENSE  MANIFEST  MANIFEST.in  README.md  README.rst  Rx.pyproj  Rx.sln  RxPY.sln  TEST_LINTING_PLAN.md  authors.txt  changes.md  memory.json  project.cfg  pyb.py  pyproject.toml  pyrightconfig.json  requirements.txt  requirements_doc.txt  setup.cfg  setup.py  tox.ini  upload-to-github-pages.sh
.config/: dotnet-tools.json
.github/: dependabot.yml  lock.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: agentic-workflows.agent.md
.github/aw/: actions-lock.json
.github/workflows/: conventional-pr-title.yml  copilot-setup-steps.yml  python-package.yml  python-publish.yml  pythonpackage.yml  repo-assist.lock.yml  repo-assist.md
.travis/: bench.sh
IxPY/: IxPY.pyproj
IxPY/ix/: __init__.py
RxPY/: README.md  RxPY.pyproj  setup.py
RxPY/linq/: enumerable.py
RxPY/rx/: __init__.py  abstractobserver.py  anonymousobservable.py  autodetachobserver.py  checkedobserver.py  notification.py  observable.py  observeonobserver.py  observer.py
RxPY/tests/: reactive_assert.py  test_asyncsubject.py  test_behaviorsubject.py  test_observable_concurrency.py  test_observable_creation.py  test_observable_imperative.py  test_observable_multiple.py  test_observable_time.py  test_observer.py  test_replaysubject.py  test_subject.py  test_timeoutscheduler.py
doc/: additional_readings.rst  conf.py  get_started.rst  index.rst  installation.rst  migration.rst  operators.rst  rationale.rst  reference.rst  reference_observable.rst  reference_observer.rst  reference_operators.rst  reference_scheduler.rst  reference_subject.rst
docs/: .conf.py.swp  .rstcheck.cfg  Makefile  additional_reading.rst  additional_readings.rst  conf.py  contributing.rst  get_started.rst  index.rst  installation.rst  license.rst  make.bat  migration.rst  operators.rst  reference.rst  reference_observable.rst  reference_observable_factory.rst  reference_operators.rst  reference_scheduler.rst  reference_subject.rst  reference_typing.rst  requirements.txt  style_guide.rst  testing.rst  utils.ipynb
docs/_templates/: .layout.html.swp  layout.html
docs/api/: core.rst  index.rst  observable.rst  scheduler.rst  single.rst  subject.rst
docs/marbles/: .combine_latest-generic-f-example.rst.swp  .with_latest_from-generic-f-example.rst.swp  .zip-generic-f-example.rst.swp  combine_latest-generic-f-example.rst  with_latest_from-generic-f-example.rst  zip-generic-f-example.rst
examples/asyncio/: await.py  toasyncgenerator.py  toasynciterator.py
examples/autocomplete/: autocomplete.js  autocomplete.py  autocomplete_asyncio.py  bottle_autocomplete.py  index.html
examples/chess/: chess.py
examples/errors/: failing.py
examples/ironpython/: meetdotnet.py
examples/konamicode/: index.html  konamicode.js  konamicode.py
examples/marbles/: frommarbles_error.py  frommarbles_flatmap.py  frommarbles_lookup.py  frommarbles_merge.py  hot.py  hot_datetime.py  testing_debounce.py  testing_flatmap.py  tomarbles.py
examples/mouse/: boot.py  main.py
examples/parallel/: timer.py
examples/statistics/: statistics.py
examples/timeflies/: timeflies.py  timeflies_gtk.py  timeflies_qt.py  timeflies_tkinter.py  timeflies_wx.py
ide/: RxPY.sln  rx.pyproj  tests.pyproj
linq/: __init__.py  linq.py
notebooks/: Getting Started.ipynb  Getting Started_py2.7.ipynb
notebooks/reactivex.io/: A Decision Tree of Observable Operators. Part I - Creation.ipynb  A Decision Tree of Observable Operators. Part II - Combination.ipynb  A Decision Tree of Observable Operators. Part III - Transformation.ipynb  Marble Diagrams.ipynb  Part II - Combination.ipynb  Part III - Transformation.ipynb  Part IV - Grouping, Buffering, Delaying, misc.ipynb  Part V - Consolidating Streams.ipynb  Part VI - Entirety Operations.ipynb  Part VII - Meta Operations.ipynb  Part VIII - Hot & Cold.ipynb  RxPy - Basic Usage and Mechanics.ipynb  startup.py
reactivex/: __init__.py  _version.py  curry.py  notification.py  pipe.py  run.py  typing.py
reactivex/abc/: __init__.py  disposable.py  observable.py  observer.py  periodicscheduler.py  scheduler.py  subject.py
reactivex/disposable/: __init__.py  booleandisposable.py  compositedisposable.py  disposable.py  multipleassignmentdisposable.py  refcountdisposable.py  scheduleddisposable.py  serialdisposable.py  singleassignmentdisposable.py
reactivex/internal/: __init__.py  basic.py  concurrency.py  constants.py  curry.py  exceptions.py  priorityqueue.py  utils.py
reactivex/observable/: __init__.py  amb.py  case.py  catch.py  combinelatest.py  combinethrottle.py  concat.py  connectableobservable.py  defer.py  empty.py  forkjoin.py  fromcallback.py  fromfuture.py  fromiterable.py  generate.py  generatewithrelativetime.py  groupedobservable.py  ifthen.py  interval.py  marbles.py  merge.py  never.py  observable.py  onerrorresumenext.py  range.py  repeat.py  returnvalue.py  start.py  startasync.py  throw.py  timer.py  toasync.py  using.py  withlatestfrom.py  zip.py
reactivex/operators/: _all.py  (+104 more)
rx/: __init__.py  _version.py  abstractobserver.py  anonymousobservable.py  anonymousobserver.py  autodetachobserver.py  blockingobservable.py  checkedobserver.py  notification.py  observable.py  observablebase.py  observeonobserver.py  observer.py  observerbase.py  observerextensions.py  scheduledobserver.py
scripts/: shipit_bump_version.sh
tests/: __init__.py  reactive_assert.py  test_behaviorsubject.py  test_disposable.py  test_group_join.py  test_immediatescheduler.py  test_linq.py  test_notification.py  test_observable_aggregates.py  test_observable_creation.py  test_observable_imperative.py  test_observable_multiple.py  test_observable_single.py  test_observable_time.py  test_observer.py  test_replaysubject.py  test_rx.py  test_subject.py  test_timeoutscheduler.py  test_version.py
(+1250 files in other folders)
