[project]
name = "reactivex"
version = "0.0.0"
description = "ReactiveX (Rx) for Python"
authors = [{ name = "Dag Brattli", email = "dag@brattli.net" }]
requires-python = ">= 3.8, < 4.0"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["typing-extensions>=4.1.1,<5"]

[project.urls]
Homepage = "http://reactivex.io"
Repository = "https://github.com/ReactiveX/RxPY"
Documentation = "https://rxpy.readthedocs.io/en/latest/"

[dependency-groups]
test = [
    "pyyaml==6.0.2",
    "pytest-asyncio>=0.18.1,<0.19",
    "pytest>=7.0.1,<8",
    "coverage>=6.3.2,<7",
    "pytest-xdist>=2.5.0,<3",
    "black>=22.1.0,<23",
    "isort>=5.10.1,<6",
    "pyright>=0.0.13,<0.0.14",
    "mypy>=0.931,<0.932",
    "flake8>=4.0.1,<5",
    "coveralls>=3.3.1,<4",
    "pre-commit>=2.17.0,<3",
    "autoflake~=1.4",
    "dunamai>=1.9.0,<2",
]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = [
    "reactivex",
    "reactivex/py.typed",
]

[tool.hatch.build.targets.wheel]
include = [
    "reactivex",
    "reactivex/py.typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target_version = ['py39']
include = '\.py$'

[tool.isort]
profile = "black"
line_length=88                 # corresponds to -w  flag
multi_line_output=3            # corresponds to -m  flag
include_trailing_comma=true    # corresponds to -tc flag
skip_glob = '^((?!py$).)*$'    # isort all Python files
float_to_top=true

[tool.mypy]
python_version = "3.9"
follow_imports = "silent"
files = ["reactivex"]
exclude = ["reactivex/operators/_\\w.*\\.py$"] # mypy will eventually catch up
disallow_any_generics = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
