[project]
name = "reactivex"
version = "0.0.0"
description = "ReactiveX (Rx) for Python"
authors = [{ name = "Dag Brattli", email = "dag@brattli.net" }]
requires-python = ">= 3.10, < 4.0"
readme = "README.rst"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["typing-extensions>=4.1.1,<5"]

[project.urls]
Homepage = "http://reactivex.io"
Repository = "https://github.com/ReactiveX/RxPY"
Documentation = "https://rxpy.readthedocs.io/en/latest/"

[dependency-groups]
test = [
    "pyyaml==6.0.2",
    "pytest-asyncio>=0.18.1,<0.19",
    "pytest>=7.0.1,<8",
    "coverage>=6.3.2,<7",
    "pytest-xdist>=2.5.0,<3",
    "ruff>=0.14.0,<1",
    "pyright>=0.0.13,<0.0.14",
    "mypy>=0.931,<0.932",
    "coveralls>=3.3.1,<4",
    "pre-commit>=2.17.0,<3",
    "dunamai>=1.9.0,<2",
]

[tool.uv]
default-groups = ["test"]

[tool.hatch.build.targets.sdist]
include = [
    "reactivex",
    "reactivex/py.typed",
]

[tool.hatch.build.targets.wheel]
include = [
    "reactivex",
    "reactivex/py.typed",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist",
    "tests",
    "notebooks",
    "examples",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["reactivex"]

[tool.mypy]
python_version = "3.10"
follow_imports = "silent"
files = ["reactivex"]
exclude = ["reactivex/operators/_\\w.*\\.py$"] # mypy will eventually catch up
disallow_any_generics = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
